--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "php": "^7.4",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5",
-        "netresearch/jsonmapper": "^1.6"
+        "netresearch/jsonmapper": "^1.6 || ^2.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5"
